--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -29,6 +29,6 @@
     <button type="button" class="scroll-button">
       <img src="./images/arrow.png" width="36" height="36" />
     </button>
-    <script src="index.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
   </body>
 </html>
